@@ -1418,74 +1418,6 @@ proto_db_get_parameters_reply_get_dam(proto_wrapper_t *wrapper)
 }
 
 proto_wrapper_t *
-proto_init_db_flush_request(ham_u64_t dbhandle, ham_u32_t flags)
-{
-    Wrapper *w=new Wrapper();
-    w->set_type(Wrapper::DB_FLUSH_REQUEST);
-    w->mutable_db_flush_request()->set_db_handle(dbhandle);
-    w->mutable_db_flush_request()->set_flags(flags);
-    return ((proto_wrapper_t *)w);
-}
-
-ham_u64_t
-proto_db_flush_request_get_db_handle(proto_wrapper_t *wrapper)
-{
-    Wrapper *w=(Wrapper *)wrapper;
-    return (w->db_flush_request().db_handle());
-}
-
-ham_u32_t
-proto_db_flush_request_get_flags(proto_wrapper_t *wrapper)
-{
-    Wrapper *w=(Wrapper *)wrapper;
-    return (w->db_flush_request().flags());
-}
-
-ham_bool_t
-proto_has_db_flush_request(proto_wrapper_t *wrapper)
-{
-    Wrapper *w=(Wrapper *)wrapper;
-    if (w->type()==Wrapper::DB_FLUSH_REQUEST) {
-        ham_assert(w->has_db_flush_request()==true, (""));
-        return (HAM_TRUE);
-    }
-    else {
-        ham_assert(w->has_db_flush_request()==false, (""));
-        return (HAM_FALSE);
-    }
-}
-
-proto_wrapper_t *
-proto_init_db_flush_reply(ham_u32_t status)
-{
-    Wrapper *w=new Wrapper();
-    w->set_type(Wrapper::DB_FLUSH_REPLY);
-    w->mutable_db_flush_reply()->set_status(status);
-    return ((proto_wrapper_t *)w);
-}
-
-ham_bool_t
-proto_has_db_flush_reply(proto_wrapper_t *wrapper)
-{
-    Wrapper *w=(Wrapper *)wrapper;
-    if (w->type()==Wrapper::DB_FLUSH_REPLY) {
-        ham_assert(w->has_db_flush_reply()==true, (""));
-        return (HAM_TRUE);
-    }
-    else {
-        ham_assert(w->has_db_flush_reply()==false, (""));
-        return (HAM_FALSE);
-    }
-}
-
-ham_u32_t
-proto_db_flush_reply_get_status(proto_wrapper_t *wrapper)
-{
-    Wrapper *w=(Wrapper *)wrapper;
-    return (w->db_flush_reply().status());
-}
-
-proto_wrapper_t *
 proto_init_check_integrity_request(ham_u64_t dbhandle, ham_u64_t txnhandle)
 {
     Wrapper *w=new Wrapper();
